--- a/lib/ace/theme/dawn.css
+++ b/lib/ace/theme/dawn.css
@@ -90,15 +90,12 @@
 }
 
 .ace-dawn .ace_invalid{
-  color: #D9D9D9;
-  background: #9D0101;
+  visibility: inherit;
 }
 
 .ace-dawn .ace_invalid.ace_illegal {
-  text-decoration:underline;
-font-style:italic;
-color:#F8F8F8;
-background-color:#B52A1D;
+  color: #D9D9D9;
+  background: #9D0101;
 }
 
 .ace-dawn .ace_invalid.ace_deprecated {
