--- a/lib/ace/theme/dawn.css
+++ b/lib/ace/theme/dawn.css
@@ -93,7 +93,7 @@
   visibility: inherit;
 }
 
-.ace-dawn .ace_invalid.ace_illegal {
+.ace-dawn .ace_illegal,.ace-dawn .ace_invalid.ace_illegal {
   color: #D9D9D9;
   background: #9D0101;
 }
