Update ace constant color for builder theme

--- a/lib/ace/theme/builder.css
+++ b/lib/ace/theme/builder.css
@@ -83,7 +83,7 @@
 }
 
 .ace-builder .ace_constant, .ace-builder .ace_constant.ace_other {
-    color: #00911A;
+    color: #008080;
 }
 
 .ace-builder .ace_constant.ace_character{
